--- a/css/Style.css
+++ b/css/Style.css
@@ -5,7 +5,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 html { scroll-behavior: smooth; }
@@ -39,6 +39,7 @@ body {
   transition: background 0.3s, transform 0.3s;
   cursor: pointer;
   background: transparent;
+  
 }
 .btn:hover {
   background: var(--accent);
@@ -110,7 +111,7 @@ nav .fa-bars { display: none; font-size: 22px; cursor: pointer; }
 .header-text p span { color: var(--accent); font-weight: 600; }
 .header-text h1 { font-size: 58px; font-weight: 700; line-height: 1.1; }
 .header-text h1 span { color: var(--accent); }
-.header-text h2 { font-size: 1.2rem; color: var(--muted); font-weight: 300; margin: 10px 0 30px; }
+.header-text h2 { font-size: 1.2rem; color: var(--muted); font-weight: 300; margin: 10px 0 30px; line-height: 1.5;}
 
 /* ===========================
    ABOUT
